--- a/NewProject/pom.xml
+++ b/NewProject/pom.xml
@@ -190,8 +190,21 @@
 	    <artifactId>jackson-core</artifactId>
 	    <version>2.10.0.pr3</version>
 	</dependency>
+<dependency>
+  <groupId>com.github.iamport</groupId>
+  <artifactId>iamport-rest-client-java</artifactId>
+  <version>0.2.14</version>
+</dependency>
+
+		
 
 	</dependencies>
+<repositories>
+  <repository>
+    <id>jitpack.io</id>
+    <url>https://jitpack.io</url>
+  </repository>
+</repositories>
 	<build>
 		<plugins>
 			<plugin>
