--- a/NewProject/pom.xml
+++ b/NewProject/pom.xml
@@ -196,6 +196,13 @@
   <version>0.2.14</version>
 </dependency>
 
+<!-- gson -->
+<dependency>
+    <groupId>com.google.code.gson</groupId>
+    <artifactId>gson</artifactId>
+	<version>2.8.5</version>
+</dependency>
+
 		
 
 	</dependencies>
