다시보냅니다 11.11 김모세

--- a/NewProject/src/main/webapp/WEB-INF/web.xml
+++ b/NewProject/src/main/webapp/WEB-INF/web.xml
@@ -49,6 +49,10 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 	
-	
+	<!--  에러추가  -->
+<error-page>
+	<error-code>404</error-code>
+	<location>/error</location>
+</error-page>
 
 </web-app>
