--- a/NewProject/.classpath
+++ b/NewProject/.classpath
@@ -36,5 +36,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="C:/mysql/mysql-connector-j-8.0.33.jar"/>
+	<classpathentry kind="lib" path="C:/mysql/jackson-core-2.10.0.pr3.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
